RR: workspace panel layout issues addressed.

--- a/HUNI/trunk/VL_GWT_prototype/war/virtual_laboratory.css
+++ b/HUNI/trunk/VL_GWT_prototype/war/virtual_laboratory.css
@@ -100,9 +100,10 @@ h1 {
 	margin: 0px 5px 0px 5px;
 }
 
-.huni-tool-details {
+.huni-tool-details {	
 	margin: 0px 0px 0px 0px;
-	padding: 10px 10px 10px 10px;
+	padding: 0px 0px 0px 0px;
+	background-color: lime;
 }
 
 .huni-tool-frame {
